# mcp-client

./: .gitignore  agent.py  fastagent.config.yaml.sample  fastagent.secrets.yaml.sample  main.py  pyproject.toml
agent/: __init__.py  agent.py  configuration.py
my_agent/: __init__.py  my_agent.py
my_agent/llm/: azure_ai.py
server/: main.py  script.py
