[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-agent-mcp[azure]>=0.2.40",
    "loguru>=0.7.3",
    "mcp>=1.10.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
disable = ["line-too-long", "too-many-arguments", "too-many-locals", "too-many-statements", "too-many-positional-arguments", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]